v2_ros2_ws/log/build_2023-09-15_22-13-10/robot/stdout_stderr.log
running egg_info
writing ../../build/robot/robot.egg-info/PKG-INFO
writing dependency_links to ../../build/robot/robot.egg-info/dependency_links.txt
writing entry points to ../../build/robot/robot.egg-info/entry_points.txt
writing requirements to ../../build/robot/robot.egg-info/requires.txt
writing top-level names to ../../build/robot/robot.egg-info/top_level.txt
reading manifest file '../../build/robot/robot.egg-info/SOURCES.txt'
writing manifest file '../../build/robot/robot.egg-info/SOURCES.txt'
running build
running build_py
copying robot/motor_controller.py -> /home/jetson/ros2_ws/build/robot/build/lib/robot
running install
running install_lib
copying /home/jetson/ros2_ws/build/robot/build/lib/robot/motor_controller.py -> /home/jetson/ros2_ws/install/robot/lib/python3.8/site-packages/robot
byte-compiling /home/jetson/ros2_ws/install/robot/lib/python3.8/site-packages/robot/motor_controller.py to motor_controller.cpython-38.pyc
  File "/home/jetson/ros2_ws/install/robot/lib/python3.8/site-packages/robot/motor_controller.py", line 41
    if left_ratio = 1.0:
                  ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/jetson/ros2_ws/install/robot/lib/python3.8/site-packages/robot-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/robot/robot.egg-info to /home/jetson/ros2_ws/install/robot/lib/python3.8/site-packages/robot-0.0.0-py3.8.egg-info
running install_scripts
Installing encoder_publisher script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing encoder_publisher_left script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing encoder_publisher_right script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing imu_controller script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing motor_controller script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing motor_driver script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing odom_publisher script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing pid_controller script to /home/jetson/ros2_ws/install/robot/lib/robot
Installing velocity_publisher script to /home/jetson/ros2_ws/install/robot/lib/robot
writing list of installed files to '/home/jetson/ros2_ws/build/robot/install.log'
